Revision history for Perl extension PPI

1.221_01
	Summary:
	- support Perl 5.12 "package NAMESPACE VERSION BLOCK" syntax
	- incompatible behavior fixes on PPI::Token::Attribute->parameters

	Details:
	- support Perl 5.12 "package NAMESPACE VERSION BLOCK" syntax
	  (RT #67831, GitHub #70) (BDFOY, MOREGAN)
	- Prevent package names like 'x' from being parsed as operators
	  (GitHub #75) (MOREGAN)
	- Prevent package names like 'v10' from being parsed as version
	  strings (GitHub #76) (MOREGAN)
	- Prevent sub names like 'v10' from being parsed as version
	  strings (RT #74527, GitHub #65) (JAE, MOREGAN)
	- Prevent 'use' and 'no' package names from being parsed as
	  operators (MOREGAN)
	- Prevent left side of fat comma from parsing as operator
	  operators (MOREGAN)
	- Fix 1.218 regression where packages, subs, and words after
	  labels like /^x\d+/ would parse as x operator (GitHub #122)
	  (MOREGAN)
	- Fix misparsing of sub attributes separated by whitespace
	  (GitHub #117) (MOREGAN)
	- Make PPI::Token::Attribute->parameters return undef not empty
	  string when attribute has no parameters (GitHub #116) (MOREGAN)
	- Unit tests for PPI::Token::Attribute (GitHub #115) (MOREGAN)

1.220 Tue 11 Nov 2014
	Summary:
	- incompatible behavior fixes on PPI::Statement::Sub->prototype
	- improved parsing of various syntax elements
	- code quality improvements
	- various small documentation fixes

	Details:
	- {} is now recognized as anonymous hash constructor instead of a code
	  block after these operators: &&= //= || && // ? :
	  (GitHub #36) (MOREGAN)
	- regex capture variables greater than $9 are now parsed completely,
	  instead of being parsed as single digit captures with numbers after
	  them (GitHub #38) (MOREGAN)
	- DESTROY and AUTOLOAD subs are now parsed even without the sub
	  keyword (GitHub #39) (MOREGAN)
	- PPI::Statement::Sub->prototype behavior now matches its
	  documentation, instead of returning the prototype string