@@ -1,12 +1,0 @@
-package PPI::Exception::ParserTimeout;
-
-use strict;
-use PPI::Exception ();
-
-use vars qw{$VERSION @ISA};
-BEGIN {
-	$VERSION = '1.220';
-	@ISA     = 'PPI::Exception';
-}
-
-1;
