@@ -14,9 +14,6 @@ BEGIN {
 	@EXPORT_OK = qw{_Document _slurp};
 }
 
-# Alarms are used to catch unexpectedly slow and complex documents
-use constant HAVE_ALARM   => !  ( $^O eq 'MSWin32' or $^O eq 'cygwin' );
-
 # 5.8.7 was the first version to resolve the notorious
 # "unicode length caching" bug.
 use constant HAVE_UNICODE => !! ( $] >= 5.008007 );
