@@ -4,6 +4,7 @@ Revision history for Perl extension PPI
 	Summary:
 	- support Perl 5.12 "package NAMESPACE VERSION BLOCK" syntax
 	- incompatible behavior fixes on PPI::Token::Attribute->parameters
+	- remove unused PPI::Document->new timeout feature.
 
 	Details:
 	- support Perl 5.12 "package NAMESPACE VERSION BLOCK" syntax
@@ -26,6 +27,11 @@ Revision history for Perl extension PPI
 	- Make PPI::Token::Attribute->parameters return undef not empty
 	  string when attribute has no parameters (GitHub #116) (MOREGAN)
 	- Unit tests for PPI::Token::Attribute (GitHub #115) (MOREGAN)
+	- Fix misparsing of sub attributes separated only by whitespace
+	  (GitHub #117) (MOREGAN)
+	- Remove undocumented, non-working 'timeout' attribute to
+	  Document->new, including HAVE_ALARM and
+	  PPI::Exception::ParserTimeout.  (GitHub #140) (MOREGAN)
 
 1.220 Tue 11 Nov 2014
 	Summary:
